Correct rendering details on mobile, fix swiper

--- a/app/scss/partials/_colors.scss
+++ b/app/scss/partials/_colors.scss
@@ -9,6 +9,7 @@ $menu-icons-red-hover: #ff4989; // pink
 $border-menu-items: #343739;
 $border-sub-menu-items: #4d535b;
 
+$submenu-title: #4d545c;
 $subMenu-background: #3a3f45;
 $likeMenu-background: #3f4246;
 
